workspaces/service-extensions-workspace/k8s/microservice/deployment.yaml
#@ load("@ytt:data", "data")
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.serviceId
  labels:
    app: #@ data.values.serviceId
spec:
  replicas: 1
  selector:
    matchLabels:
      app: #@ data.values.serviceId
  template:
    metadata:
      labels:
        app: #@ data.values.serviceId
    spec:
      containers:
      - name: #@ data.values.serviceId
        image: #@ data.values.image
        #!imagePullPolicy: Never
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
        - containerPort: 8000
        #!volumeMounts:
        #!- mountPath: /etc/liferay/lxc/dxp-metadata
        #!  name: lxc-dxp-metadata
        #!  readOnly: true
        #!- mountPath: /etc/liferay/lxc/ext-init-metadata
        #!  name: lxc-ext-init-metadata
        #!  readOnly: true
      #!volumes:
      #!  - name: lxc-dxp-metadata
      #!    configMap:
      #!      name: lxc-dxp-metadata
      #!  - name: lxc-ext-init-metadata
      #!    configMap:
      #!      name: #@ "{}-lxc-ext-init-metadata".format(data.values.serviceId)
