workspaces/service-extensions-workspace/k8s/microservice/service.yaml
#@ load("@ytt:data", "data")
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.serviceId
spec:
  type: LoadBalancer
  selector:
    app: #@ data.values.serviceId 
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
