workspaces/service-extensions-workspace/k8s/microservice/ingress.yaml
#@ load("@ytt:data", "data")
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #@ "{}-ingress".format(data.values.serviceId)
spec:
  rules:
  - host: #@ "{}.127.0.0.1.nip.io".format(data.values.serviceId)
    http:
      paths:
      - backend:
          service:
            name: #@ data.values.serviceId
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
